made edits to portfolio hovering, CV

--- a/resume.html
+++ b/resume.html
@@ -106,132 +106,132 @@
           			<h5>Public Art Exhibitions</h5>
           			<!--<div class="exp-wrap py-4">-->
           				<div class="desc">
-	          				<div>Art. Write. Now. Tour 2019 - 2020</div>
+	          				<div>- Art. Write. Now. Tour 2019 - 2020</div>
           				</div>
 
                   <div class="desc">
-	          				<div>Columbus College of Art & Design. Columbus, OH. September - October 2019</div>
+	          				<div>- Columbus College of Art & Design. Columbus, OH. September - October 2019</div>
           				</div>
 
                   <div class="desc">
-	          				<div>21 Dreams Arts & Culture. Montgomery, AL. November - December 2019</div>
+	          				<div>- 21 Dreams Arts & Culture. Montgomery, AL. November - December 2019</div>
           				</div>
 
                   <div class="desc">
-	          				<div>Pennsylvania Academy of Fine Arts. Philadelphia, PA. January - February 2020</div>
+	          				<div>- Pennsylvania Academy of Fine Arts. Philadelphia, PA. January - February 2020</div>
           				</div>
 
                   <div class="desc">
-                    <div>Joslyn Art Museum. Omaha, NE. March - May 2020</div>
+                    <div>- Joslyn Art Museum. Omaha, NE. March - May 2020</div>
                   </div>
 
                   <div class="desc">
-                    <div>Art. Write. Now. 2019 National Exhibition</div>
+                    <div>- Art. Write. Now. 2019 National Exhibition</div>
                   </div>
 
                   <div class="desc">
-                    <div>School of Design at The New School. New York, NY. June 2019</div>
+                    <div>- School of Design at The New School. New York, NY. June 2019</div>
                   </div>
 
                   <div class="desc">
-                    <div>National Scholastic Art and Writing Regional Exhibition. Pacific Grove Art Center, Pacific Grove, CA. March 2019</div>
+                    <div>- National Scholastic Art and Writing Regional Exhibition. Pacific Grove Art Center, Pacific Grove, CA. March 2019</div>
                   </div>
 
                   <div class="desc">
-                    <div>MICA Visual Art Exhibition. MICA, Baltimore, MD. July 2019</div>
+                    <div>- MICA Visual Art Exhibition. MICA, Baltimore, MD. July 2019</div>
                   </div>
 
                   <div class="desc">
-                    <div>Youth Art Annual Exhibition. Pallo Alto Art Center, Palo Alto, CA. April 2019</div>
+                    <div>- Youth Art Annual Exhibition. Pallo Alto Art Center, Palo Alto, CA. April 2019</div>
                   </div>
 
                   <div class="desc">
-                    <div>AP Studio Art Group Exhibition. Gunn High School library, Palo Alto, CA. December 2018</div>
+                    <div>- AP Studio Art Group Exhibition. Gunn High School library, Palo Alto, CA. December 2018</div>
                   </div>
 
                   <div class="desc">
-                    <div>CSSSA Visual Art Exhibition. CalArts, Valencia, CA. August 2018</div>
+                    <div>- CSSSA Visual Art Exhibition. CalArts, Valencia, CA. August 2018</div>
                   </div>
 
           			<!--</div>-->
                 <br>
                 <h5>Awards</h5>
                 <div class="desc">
-                  <div>National Gold Medal in Painting, Scholastic Art & Writing Awards, 2019</div>
+                  <div>- National Gold Medal in Painting, Scholastic Art & Writing Awards, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>3 Regional Gold Keys, Scholastic Art & Writing Awards, 2019</div>
+                  <div>- 3 Regional Gold Keys, Scholastic Art & Writing Awards, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Honorable Mention, Scholastic Art & Writing Awards, 2019</div>
+                  <div>- Honorable Mention, Scholastic Art & Writing Awards, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Congressional Art Competition Certificate, 2018</div>
+                  <div>- Congressional Art Competition Certificate, 2018</div>
                 </div>
 
                 <div class="desc">
-                  <div>Future Art China International Art Competition Semi-Finalist, 2017</div>
+                  <div>- Future Art China International Art Competition Semi-Finalist, 2017</div>
                 </div>
 
                 <br>
                 <h5>Comissioned/Requested Projects</h5>
                 <div class="desc">
-                  <div>TEDx Gunn High School "One Step Forward" promotional & merchandise branding, 2020</div>
+                  <div>- TEDx Gunn High School "One Step Forward" promotional & merchandise branding, 2020</div>
                 </div>
 
                 <div class="desc">
-                  <div><i>The Gunn Oracle</i> Apparel Design, 2019 - 2020</div>
+                  <div>- <i>The Gunn Oracle</i> Apparel Design, 2019 - 2020</div>
                 </div>
 
                 <div class="desc">
-                  <div>City of Palo Alto Buoyancy Festival Branding, 2019</div>
+                  <div>- City of Palo Alto Buoyancy Festival Branding, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Commission Painting for Yerba Buena Ice Skating Center, 2019</div>
+                  <div>- Commission Painting for Yerba Buena Ice Skating Center, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Gunn High School DECA Logo and Apparel Design, 2019</div>
+                  <div>- Gunn High School DECA Logo and Apparel Design, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Gunn Cancer Society Logo Design, 2018</div>
+                  <div>- Gunn Cancer Society Logo Design, 2018</div>
                 </div>
 
                 <div class="desc">
-                  <div>San Francisco Ice Theater Team Pin Design, 2015 - 2019</div>
+                  <div>- San Francisco Ice Theater Team Pin Design, 2015 - 2019</div>
                 </div>
 
                 <br>
                 <h5>Publications</h5>
                 <div class="desc">
-                  <div>Pandora's Box, Spring Issue 2019</div>
+                  <div>- Pandora's Box, Spring Issue 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Pandora's Box, Cover Page Winter Issue 2018</div>
+                  <div>- Pandora's Box, Cover Page Winter Issue 2018</div>
                 </div>
 
                 <div class="desc">
-                  <div>Palo Alto Roots Literary Magazine, 2017</div>
+                  <div>- Palo Alto Roots Literary Magazine, 2017</div>
                 </div>
 
                 <br>
                 <h5>Education</h5>
                 <div class="desc">
-                  <div>Henry M. Gunn High School, 2016 - 2020</div>
+                  <div>- Henry M. Gunn High School, 2016 - 2020</div>
                 </div>
 
                 <div class="desc">
-                  <div>Graphic Design Core, MICA Pre-College, 2019</div>
+                  <div>- Graphic Design Core, MICA Pre-College, 2019</div>
                 </div>
 
                 <div class="desc">
-                  <div>Visual Arts Major, CSSSA, 2018</div>
+                  <div>- Visual Arts Major, CSSSA, 2018</div>
                 </div>
 
           		</div>
