another round of edits

--- a/resume.html
+++ b/resume.html
@@ -157,6 +157,10 @@
                 <br>
                 <h5>Awards</h5>
                 <div class="desc">
+                  <div>- National YoungArts Foundation Honorable Mention Winner in Design Arts, 2020</div>
+                </div>
+
+                <div class="desc">
                   <div>- National Gold Medal in Painting, Scholastic Art & Writing Awards, 2019</div>
                 </div>
 
