--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hi, I'm Shannon!</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
+                                <p data-animation="bounceInDown" data-delay="500ms">I'm a 2020 National Youngarts Foundation Winner in Design Arts and 2019 Scholastic Art and Writing Awards National Gold Medalist.</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
                                     <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
@@ -122,7 +122,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hi, I'm Shannon!</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
+                                <p data-animation="bounceInUp" data-delay="500ms">I'm a 2020 National Youngarts Foundation Winner in Design Arts and 2019 Scholastic Art and Writing Awards National Gold Medalist.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                     <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
@@ -140,7 +140,7 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hi, I'm Shannon!</h2>
-                                <p data-animation="bounceInDown" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
+                                <p data-animation="bounceInDown" data-delay="500ms">I'm a 2020 National Youngarts Foundation Winner in Design Arts and 2019 Scholastic Art and Writing Awards National Gold Medalist.</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
                                     <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
