--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -165,7 +165,7 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta1new.png" alt="">
+                <img src="../img/insta/insta1new.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -185,7 +185,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta3.png" alt="">
+                <img src="../img/insta/insta3.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -195,7 +195,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta4.png" alt="">
+                <img src="../img/insta/insta4.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -205,7 +205,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta5.png" alt="">
+                <img src="../img/insta/insta5.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -215,7 +215,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta6.png" alt="">
+                <img src="../img/insta/insta6.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
