--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art1.png);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art1.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
@@ -115,7 +115,7 @@
             </div>
 
             <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art2.png);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art2.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
